deploy/deployment.yaml
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2 for before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: automerger
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: automerger
        type: syncer
      name: automerger
    spec:
      containers:
      - name: automerger
        image: ofpiyush/automerger:latest
        ports:
          - containerPort: 3000
