deploy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: automerger
spec:
  selector:
    app: automerger
    type: syncer
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
